--- a/presentation/index.mdx
+++ b/presentation/index.mdx
@@ -13,7 +13,75 @@ import {darkComponents} from './slides.js';
 <Site/>
 
 ---
-<Title number={5}>Use racist <Appear order={1} startValue={{display:'none'}}><span style={{color:'#f5ab35'}}>(or not diverse)</span></Appear> data</Title>
+<Title number={5}>Use racist data</Title>
+
+## Predictive Policing
+
+[Maricopa county, many others](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3333423)
+
+[microsoft Tay](https://www.theverge.com/2016/3/25/11306566/microsoft-racist-tay-ai-twitter-chatbot-apology)
+
+<Site/>
+
+---
+
+<Title number={4}>Don't use diverse data</Title>
+
+[FaceApp: White is hot](https://techcrunch.com/2017/04/25/faceapp-apologises-for-building-a-racist-ai/)
+
+[Amazon Reckognition](https://medium.com/@Joy.Buolamwini/response-racial-and-gender-bias-in-amazon-rekognition-commercial-ai-system-for-analyzing-faces-a289222eeced)
+
+[gender data gap](https://amp.theguardian.com/lifeandstyle/2019/feb/23/truth-world-built-for-men-car-crashes?CMP=share_btn_tw&__twitter_impression=true)
+
+<Site/>
+
+---
+
+<Title number={3}>Accidentally</Title>
+
+
+
+### Black people in UK 21 times more likely to have university applications investigated, figures show
+
+> Fraud and similarity detection software, as well as input from universities, are used when deciding whether an application needs investigating.
+
+[Source](https://www.independent.co.uk/news/education/education-news/uk-black-students-university-applications-investigation-more-likely-ucas-figures-nus-labour-a8314496.html)
+
+### Discrimination in Online Ad Delivery
+
+> black	babies,	such	as	DeShawn,	Darnell and	Jermaine,	generated	ads	suggestive	of	an
+arrest	in	81	to	86 percent	of	name	searches	on	one	website	and	92 to	95	percent	on
+the	other, while	those assigned	at	birth	primarily	to	whites,	such	as	Geoffrey,	Jill and
+Emma,	generated	more	neutral	copy:	the	word	"arrest"	appeared	in	23 to	29
+percent	of	name	searches	on	one	site	and	0	to	60	percent	on	the	other
+
+[Paper](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2208240)
+<Site/>
+
+
+[Uber's accidental redlining](https://twitter.com/rouge8/status/781279125596241920)
+[Same but for seattle](https://medium.com/@SherylCababa/i-combined-the-map-for-seattle-uberhop-with-a-racial-segregation-map-sorry-brown-people-9d756168c8b9)
+---
+
+<Title number={2}>Use magic black boxes</Title>
+
+`pip install`, `npm install`, `packages.install("")`
+
+```r
+library(tweetbotornot)
+users <- c("realdonaldtrump", "netflix_bot")
+
+\
+
+data <- tweetbotornot(users)
+
+```
+[Snapchat Giphy](https://techcrunch.com/2018/03/09/snapchat-removes-giphy-feature-due-to-racial-slur-gif/)
+[jewish slur](https://www.nytimes.com/2018/08/30/business/jewtropolis-map-new-york-snapchat.html)
+
+<Site/>
+
+---
 
 ```python
 text_to_sentiment("Let's go get Italian food")
@@ -36,43 +104,6 @@ text_to_sentiment("Let's go get Mexican food")
 ```
 
 Source: [Robyn Speer](https://blog.conceptnet.io/posts/2017/how-to-make-a-racist-ai-without-really-trying/)
-
-<Site/>
-
----
-
-<Title number={4}>Don't consider all users</Title>
-
-- asdf
-- asdkfjasdkfj
-
-<Site/>
-
----
-
-<Title number={3}>Use magic black boxes</Title>
-
-`pip install`, `npm install`, `packages.install("")`
-
-```r
-library(tweetbotornot)
-users <- c("realdonaldtrump", "netflix_bot")
-
-\
-
-data <- tweetbotornot(users)
-
-```
-
-<Site/>
-
----
-
-<Title number={2}>Trust the public</Title>
-
-sd
-
-<Site/>
 
 ---
 
