--- a/presentation/index.mdx
+++ b/presentation/index.mdx
@@ -61,6 +61,9 @@ percent	of	name	searches	on	one	site	and	0	to	60	percent	on	the	other
 
 [Uber's accidental redlining](https://twitter.com/rouge8/status/781279125596241920)
 [Same but for seattle](https://medium.com/@SherylCababa/i-combined-the-map-for-seattle-uberhop-with-a-racial-segregation-map-sorry-brown-people-9d756168c8b9)
+[Amazon accidental redlining](https://www.bloomberg.com/graphics/2016-amazon-same-day/)
+
+
 ---
 
 <Title number={2}>Use magic black boxes</Title>
@@ -178,5 +181,7 @@ notes: outated data, 2020 census data that included immigration question, assump
 - Don't assume your data is free of bias
 - Audit your 3rd party packages or models
 - Remember biased algorithms *are* possible
+
+👋🏼
 
 <Site/>
