--- a/presentation/index.mdx
+++ b/presentation/index.mdx
@@ -15,6 +15,8 @@ import {darkComponents} from './slides.js';
 ---
 <Title number={5}>Use racist data</Title>
 
+- data driven decisions with racist data means racist decisions
+
 ## Predictive Policing
 
 [Maricopa county, many others](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3333423)
@@ -26,6 +28,8 @@ import {darkComponents} from './slides.js';
 ---
 
 <Title number={4}>Don't use diverse data</Title>
+
+- data driver decisions
 
 [FaceApp: White is hot](https://techcrunch.com/2017/04/25/faceapp-apologises-for-building-a-racist-ai/)
 
@@ -39,34 +43,37 @@ import {darkComponents} from './slides.js';
 
 <Title number={3}>Accidentally</Title>
 
+- Race is *deeply* embedded into many aspects of our life
 
+### Black people in UK 21 times more likely to have university applications
+investigated, figures show
 
-### Black people in UK 21 times more likely to have university applications investigated, figures show
-
-> Fraud and similarity detection software, as well as input from universities, are used when deciding whether an application needs investigating.
+> Fraud and similarity detection software, as well as input from universities,
+are used when deciding whether an application needs investigating.
 
 [Source](https://www.independent.co.uk/news/education/education-news/uk-black-students-university-applications-investigation-more-likely-ucas-figures-nus-labour-a8314496.html)
 
-### Discrimination in Online Ad Delivery
-
-> black	babies,	such	as	DeShawn,	Darnell and	Jermaine,	generated	ads	suggestive	of	an
-arrest	in	81	to	86 percent	of	name	searches	on	one	website	and	92 to	95	percent	on
-the	other, while	those assigned	at	birth	primarily	to	whites,	such	as	Geoffrey,	Jill and
-Emma,	generated	more	neutral	copy:	the	word	"arrest"	appeared	in	23 to	29
-percent	of	name	searches	on	one	site	and	0	to	60	percent	on	the	other
-
-[Paper](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2208240)
 <Site/>
+
+---
+
+<Title number={3}>Accidentally</Title>
 
 
 [Uber's accidental redlining](https://twitter.com/rouge8/status/781279125596241920)
+
 [Same but for seattle](https://medium.com/@SherylCababa/i-combined-the-map-for-seattle-uberhop-with-a-racial-segregation-map-sorry-brown-people-9d756168c8b9)
+
 [Amazon accidental redlining](https://www.bloomberg.com/graphics/2016-amazon-same-day/)
 
 
 ---
 
-<Title number={2}>Use magic black boxes</Title>
+<Title number={2}>Use magic black boxes 🧙🏼‍♂️</Title>
+
+- Package creators may not have considered racial bias
+- Is the package really appropriate for your project?
+
 
 `pip install`, `npm install`, `packages.install("")`
 
@@ -80,6 +87,7 @@ data <- tweetbotornot(users)
 
 ```
 [Snapchat Giphy](https://techcrunch.com/2018/03/09/snapchat-removes-giphy-feature-due-to-racial-slur-gif/)
+
 [jewish slur](https://www.nytimes.com/2018/08/30/business/jewtropolis-map-new-york-snapchat.html)
 
 <Site/>
