--- a/presentation/index.mdx
+++ b/presentation/index.mdx
@@ -2,6 +2,7 @@ import {Cite, Appear} from 'spectacle';
 import Number from './components/Number.jsx';
 import Title from './components/Title.jsx';
 import Name from './components/Name.jsx';
+import AmazonFace from './components/AmazonFace.jsx';
 import {aoc, saavedra, food, gerry} from './assets.js'
 import QuotePic from './components/QuotePic.jsx';
 import Site from './components/Site.jsx'
@@ -15,7 +16,7 @@ import {darkComponents} from './slides.js';
 ---
 <Title number={5}>Use racist data</Title>
 
-- data driven decisions with racist data means racist decisions
+- Racist data to make data driven decisions -> racist decision
 
 ## Predictive Policing
 
@@ -31,11 +32,15 @@ import {darkComponents} from './slides.js';
 
 - data driver decisions
 
-[FaceApp: White is hot](https://techcrunch.com/2017/04/25/faceapp-apologises-for-building-a-racist-ai/)
-
 [Amazon Reckognition](https://medium.com/@Joy.Buolamwini/response-racial-and-gender-bias-in-amazon-rekognition-commercial-ai-system-for-analyzing-faces-a289222eeced)
 
-[gender data gap](https://amp.theguardian.com/lifeandstyle/2019/feb/23/truth-world-built-for-men-car-crashes?CMP=share_btn_tw&__twitter_impression=true)
+<Site/>
+
+---
+
+<Title number={4}></Title>
+
+<AmazonFace/>
 
 <Site/>
 
@@ -57,18 +62,6 @@ are used when deciding whether an application needs investigating.
 
 ---
 
-<Title number={3}>Accidentally</Title>
-
-
-[Uber's accidental redlining](https://twitter.com/rouge8/status/781279125596241920)
-
-[Same but for seattle](https://medium.com/@SherylCababa/i-combined-the-map-for-seattle-uberhop-with-a-racial-segregation-map-sorry-brown-people-9d756168c8b9)
-
-[Amazon accidental redlining](https://www.bloomberg.com/graphics/2016-amazon-same-day/)
-
-
----
-
 <Title number={2}>Use magic black boxes 🧙🏼‍♂️</Title>
 
 - Package creators may not have considered racial bias
@@ -86,9 +79,6 @@ users <- c("realdonaldtrump", "netflix_bot")
 data <- tweetbotornot(users)
 
 ```
-[Snapchat Giphy](https://techcrunch.com/2018/03/09/snapchat-removes-giphy-feature-due-to-racial-slur-gif/)
-
-[jewish slur](https://www.nytimes.com/2018/08/30/business/jewtropolis-map-new-york-snapchat.html)
 
 <Site/>
 
